# JinEngine

./: .gitignore  JinEditor.sln  JinEditor.vcxproj  JinEditor.vcxproj.filters  imgui.ini  makefile  meson.build
include/: ImGUILayer.h  MainLayer.h
res/shaders/: fragment.glsl  vertex.glsl
src/: ImGUILayer.cpp  MainLayer.cpp  MainLayer.cpp.PUcwWh  MainLayer.cpp.lKemOt  main.cpp
subprojects/: imgui.wrap  jin.wrap
subprojects/imgui/: imgui.vcxproj  imgui.vcxproj.filters  imguizmo.cpp  imguizmo.h  meson.build  meson_options.txt
subprojects/jin/: jin.vcxproj  jin.vcxproj.filters  meson.build
subprojects/jin/include/: Application.h  Components.h  CubeMap.h  EditorCamera.h  Entity.h  Event.h  Framebuffer.h  IO.h  IndexBufferObject.h  Input.h  Jin.h  KeyCodes.h  Layer.h  Level.h  Logger.h  Material.h  Maths.h  Matrix4.h  Memory.h  Mesh.h  Model.h  Rect.h  Renderer.h  Shader.h  ShaderProgram.h  SpriteSheet.h  SpriteSheetAnimation.h  Texture.h  Time.h  Types.h  UniformBufferObject.h  Vector2.h  Vector3.h  Vector4.h  VertexArrayObject.h  VertexBufferObject.h  Window.h
subprojects/jin/src/: Application.cpp  CubeMap.cpp  EditorCamera.cpp  Entity.cpp  Event.cpp  Framebuffer.cpp  IO.cpp  IndexBufferObject.cpp  Input.cpp  JinTime.cpp  Layer.cpp  Level.cpp  Material.cpp  Maths.cpp  Matrix4.cpp  Memory.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  SpriteSheet.cpp  SpriteSheetAnimation.cpp  Texture.cpp  Time.cpp  UniformBufferObject.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  Window.cpp  stb_image.cpp
